# libopenschichtplaner5

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  prepare-release.yml  release.yml
docs/: analysis_summary.md  architecture.md  new_features.md
sp5lib/: _resource_paths.py  auto_migrate.py  calculations.py  cdx_writer.py  cli.py  database.py  dbf_reader.py  dbf_writer.py  pg_database.py
sp5lib/orm/: README.md  __init__.py  models.py  models_pg.py  repository.py  sync.py
src/libopenschichtplaner5/: __init__.py  __main__.py  analyze_dbf.py  api.py  cross_reference.py  exceptions.py  export.py  logging_config.py  performance.py  query_engine.py  registry.py  registry_improved.py  relationships.py  relationships_improved.py  relationships_updated.py  reports.py  streaming.py
src/libopenschichtplaner5/db/: improved_reader.py  reader.py
src/libopenschichtplaner5/models/: absence.py  base.py  book.py  build.py  cycle.py  cycle_assignment.py  cycle_entitlement.py  cycle_exception.py  employee.py  employee_access.py  employee_shift.py  group.py  group_access.py  group_assignment.py  holiday.py  holiday_assignment.py  leave_entitlement.py  leave_type.py  note.py  overtime.py  period.py  shift.py  shift_demand.py  shift_detail.py  shift_plan_demand.py  shift_restriction.py  shift_rule.py  shift_schedule.py  user.py  user_setting.py  work_location.py  xchar.py
src/libopenschichtplaner5/tests/: test_dbf_loading.py
src/libopenschichtplaner5/utils/: analyzers.py  helpers.py  logging_config.py  practical_helpers.py  strings.py  validation.py
tests/: conftest.py  test_absence_partial_day.py  test_absence_visibility.py  test_annual_close_options.py  test_assign_cycle_end.py  test_cache_invalidation.py  test_calculations.py  test_cdx_writer.py  test_cli.py  test_concurrent_write_ids.py  test_conflict_no_long_shift.py  test_conflict_soll_ist.py  test_database_calculations.py  test_dbf.py  test_eligible_replacements.py  test_employee_sort_name.py  test_facade_write_roundtrip.py  test_golden_sample_db.py  test_holiday_writes.py  test_legacy_password_encodings.py  test_oracle_calculations.py  test_orm.py  test_pg_calculations.py  test_registry.py  test_relationships.py  test_reorder.py  test_shift_leave_bold.py  test_soll_ist_plan.py  test_thread_safety.py  test_user_permissions.py  test_visibility_scope.py  test_workplace_assignment.py  test_writer_parity.py
