[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libopenschichtplaner5"
version = "1.10.0"
description = "Read and write the original Schichtplaner5 FoxPro .DBF database files, plus the SQLite/PostgreSQL ORM and sync layer used by OpenSchichtplaner5."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matthias Schabhüttl", email = "matthias@matthiasschabhuettl.com" }]
requires-python = ">=3.10"
keywords = ["schichtplaner5", "dbf", "foxpro", "shift-planning", "dbase"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
dependencies = [
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "pyotp>=2.9.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
sp5lib = "sp5lib.cli:main"

[project.urls]
Homepage = "https://github.com/mschabhuettl/libopenschichtplaner5"
Source = "https://github.com/mschabhuettl/libopenschichtplaner5"
Changelog = "https://github.com/mschabhuettl/libopenschichtplaner5/blob/main/CHANGELOG.md"
Issues = "https://github.com/mschabhuettl/libopenschichtplaner5/issues"
"Main application" = "https://github.com/mschabhuettl/openschichtplaner5"

[tool.setuptools]
packages = ["sp5lib", "sp5lib.orm"]

[tool.setuptools.package-data]
sp5lib = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # == False / == True — required for SQLAlchemy WHERE clauses
    "B008",  # function calls in default arguments
    "B904",  # raise-without-from-inside-except — inherited, fix incrementally
]

[tool.pytest.ini_options]
testpaths = ["tests"]
